# hck

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  THIRDPARTY.yml  benchmark.sh  justfile  pgo.sh  pgo_local.sh
.github/: dependabot.yml  publish.yml
.github/workflows/: build_and_test.yml  publish.yml
src/: main.rs
src/lib/: buffer_parser.rs  buffered_output.rs  core.rs  field_range.rs  line_parser.rs  mmap.rs  mod.rs  single_byte_delim_parser.rs
src/lib/chunk/: chunk.rs  chunk_processor.rs  chunk_reader.rs  chunk_writer.rs  mod.rs
src/lib/field_range/: field_range.rs  mod.rs
src/lib/threaded_io/: input.rs  output.rs
