[package]
edition = "2021"
name = "hck"
version = "0.10.1"
authors = ["Seth Stadick <sstadick@gmail.com>"]
license = "Unlicense OR MIT"
repository = "https://github.com/sstadick/hck"
description = "A sharp cut(1) clone."
documentation = "https://docs.rs/hck"
readme = "README.md"
categories = ["text-processing", "command-line-interface"]
keywords = ["text", "cli"]

[lib]
name = "hcklib"
path = "src/lib/mod.rs"

[[bin]]
name = "hck"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.86"
bstr = "1.9.1"
clap = { version = "4.5.6", features = ["derive"] }
env_logger = "0.11.3"
flate2 = { version = "1.0.30", features = ["zlib-ng-compat"], default-features = false }
gzp = { version = "0.11.3", default-features = false, features = ["deflate_zlib_ng","libdeflate"] }
grep-cli = "0.1.10"
lazy_static = "1.4.0"
log = "0.4.21"
memmap = { package = "memmap2", version = "0.9.4" }
memchr = "2.7.2"
num_cpus = "1.16.0"
regex = "1.10.4"
ripline = "0.1.0"
termcolor = "1.4.1"
thiserror = "1.0.61"
git-version = "0.3.9"

[dev-dependencies]
tempfile = "3.10.1"
rstest = "0.21.0"
