[package]
edition = "2021"
name = "hck"
version = "0.11.3"
authors = ["Seth Stadick <sstadick@gmail.com>"]
license = "Unlicense OR MIT"
repository = "https://github.com/sstadick/hck"
description = "A sharp cut(1) clone."
documentation = "https://docs.rs/hck"
readme = "README.md"
categories = ["text-processing", "command-line-interface"]
keywords = ["text", "cli"]

[lib]
name = "hcklib"
path = "src/lib/mod.rs"

[[bin]]
name = "hck"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.97"
bstr = "1.11.3"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
flate2 = { version = "1.1.0", features = [
    "zlib-ng-compat",
], default-features = false }
gzp = { version = "1.0.1", default-features = false, features = [
    "deflate_zlib_ng",
    "libdeflate",
] }
grep-cli = "0.1.11"
lazy_static = "1.5.0"
log = "0.4.26"
memmap = { package = "memmap2", version = "0.9.5" }
memchr = "2.7.4"
num_cpus = "1.16.0"
regex = "1.11.1"
ripline = "0.1.0"
termcolor = "1.4.1"
thiserror = "2.0.12"
git-version = "0.3.9"

[dev-dependencies]
tempfile = "3.19.0"
rstest = "0.25.0"
